Bug 365746 - clicking dock icon when modal dialog is showing shouldn't create new browser window. Patch by Sean Murphy <murph@seanmurph.com>, r=smorgan, sr=mento